.opsera-cwa-test-3/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cwa-test-3
  labels:
    app: cwa-test-3
    tenant: opsera
    managed-by: opsera-c2c
spec:
  type: ClusterIP
  selector:
    app: cwa-test-3
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
